<resources>
    <!-- App texts -->
    <string name="app_name">Anya</string>
    <string name="app_version">Version: %1$s</string>
    <string name="device">Platform: %1$s</string>
    <string name="network_status">Network status: %1$s</string>
    <string name="current_battery_level">Current battery level: %1$s</string>
    <string name="created_by">Made by Ahmed Shakir</string>
    <string name="app_family">a part of Supernova</string>

    <string name="app_logo_content_description">App logo</string>

    <!-- A11Y state -->
    <string name="a11y_state_enabled">enabled</string>
    <string name="a11y_state_disabled">disabled</string>
    <string name="a11y_state_expanded">expanded</string>
    <string name="a11y_state_collapsed">collapsed</string>

    <!-- A11Y action -->
    <string name="a11y_action_date_picker_content_description">Date picker button</string>
    <string name="a11y_action_sort_content_description">Sort button</string>
    <string name="a11y_action_search_content_description">Search button</string>
    <string name="a11y_action_clear_field_content_description">Clear field button</string>
    <string name="a11y_action_show_password_content_description">Show password button</string>
    <string name="a11y_action_hide_password_content_description">Hide password button</string>
    <string name="a11y_action_delete_content_description">Delete %1$s button</string>
    <string name="a11y_action_edit_content_description">Edit %1$s button</string>
    <string name="a11y_action_share_content_description">Share %1$s button</string>

    <string name="a11y_dialog_delete_confirmation_content_description">Delete %1$s confirmation dialog</string>

    <!-- A11Y component -->
    <string name="a11y_date_picker">Date picker, currently: %1$s</string>
    <string name="a11y_input_field">Input field</string>
    <string name="a11y_search_field">Search field</string>
    <string name="a11y_select_field">Select field, currently %1$s. Tap to expand menu.</string>
    <string name="a11y_select_field_menu">Menu options</string>
    <string name="a11y_password_field">Password field</string>
    <string name="a11y_checkbox">Checkbox</string>
    <string name="a11y_switch">Switch</string>
    <string name="a11y_button">Button</string>
    <string name="a11y_date_picker_dialog">Date picker dialog</string>
    <string name="a11y_swipeable_list_item_with_actions">Swipeable list item with actions</string>

    <!-- NetworkHandler labels -->
    <string name="network_status_offline_label">Offline</string>
    <string name="network_status_online_label">Online (%1$s)</string>
    <string name="network_status_restricted_label">Online (Restricted: %1$s)</string>
    <string name="network_status_loading_label">Loading...</string>

    <!-- Authentication labels -->
    <string name="auth_action_sign_out_label">Sign out</string>

    <!-- User profile labels -->
    <string name="user_profile_label">My Profile</string>
    <string name="user_profile_action_content_description">Action to navigate to profile</string>

    <!-- File upload labels -->
    <string name="file_action_view_label">View file</string>
    <string name="file_action_upload_label">Upload file</string>

    <!-- Datetime labels -->
    <string name="datetime_years_old">%1$s years old</string>
    <string name="datetime_months_old">%1$s months old</string>

    <!-- Sort labels -->
    <string name="sort_default_label">Default order</string>
    <string name="sort_firstname_label">Order by firstname</string>
    <string name="sort_lastname_label">Order by lastname</string>
    <string name="sort_name_label">Order by name</string>
    <string name="sort_dob_label">Order by date of birth</string>
    <string name="sort_date_label">Order by date</string>
    <string name="sort_title_label">Order by title</string>

    <!-- TopBar labels -->
    <string name="topbar_action_back_content_description">Navigate back button</string>
    <string name="topbar_action_menu_content_description">Top bar menu button</string>

    <!-- Default action labels -->
    <string name="save_action_label">Save</string>
    <string name="delete_action_label">Delete %1$s</string>

    <!-- Default dialog labels -->
    <string name="default_dialog_confirm_action_label">Confirm</string>
    <string name="default_dialog_dismiss_action_label">Dismiss</string>
    <string name="default_dialog_ok_action_label">OK</string>
    <string name="default_dialog_cancel_action_label">Cancel</string>

    <string name="dialog_delete_confirmation_title">Confirm Delete</string>
    <string name="dialog_delete_confirmation_message">Are you sure you want to delete %1$s? This action cannot be undone.</string>

    <!-- Profile image labels -->
    <string name="profile_image_title">Add profile image</string>
    <string name="profile_image_description">Profile image</string>
    <string name="profile_image_dialog_content_description">Image picker dialog</string>
    <string name="profile_image_dialog_camera_action_label">Take a photo</string>
    <string name="profile_image_dialog_camera_action_content_description">Take a photo button</string>
    <string name="profile_image_dialog_photo_library_action_label">Upload from Photo Library</string>
    <string name="profile_image_dialog_photo_library_action_content_description">Upload from Photo Library button</string>
    <string name="profile_image_dialog_files_action_label">Upload from Files</string>
    <string name="profile_image_dialog_files_action_content_description">Upload from Files button</string>
    <string name="profile_image_permission_dialog_title">Permission Required</string>
    <string name="profile_image_permission_dialog_description">To set your profile image, please grant this permission. You can manage permissions in your device settings.</string>
    <string name="profile_image_permission_dialog_content_description">Dialog asking for permission</string>
    <string name="profile_image_permission_settings_action_label">Settings</string>
    <string name="profile_image_permission_cancel_action_label">Cancel</string>

    <!-- Error texts -->
    <string name="error_bad_request">The request contains errors.</string>
    <string name="error_conflict">There is a request conflict.</string>
    <string name="error_no_internet">Couldn't connect to server, please check your internet connection.</string>
    <string name="error_payload_too_large">The request payload is too large.</string>
    <string name="error_request_timeout">The request timed out.</string>
    <string name="error_serialization">Couldn't serialize or deserialize data.</string>
    <string name="error_too_many_requests">Oops, it seems like your quota is exceeded.</string>
    <string name="error_unauthenticated">You're not authenticated, please sign in.</string>
    <string name="error_unauthorized">You're not authorized to perform the request.</string>
    <string name="error_unknown">Something went wrong. Please try again later.</string>

    <string name="error_initialization_network_title">Network Error</string>
    <string name="error_initialization_network_description">Unable to connect to the internet. You can try again or continue offline with cached data.</string>
    <string name="error_initialization_network_action_primary_label">Retry</string>
    <string name="error_initialization_network_action_secondary_label">Go Offline</string>

    <string name="error_initialization_database_title">Database Error</string>
    <string name="error_initialization_database_description">Unable to access app data. Try again or clear app data to start fresh.</string>
    <string name="error_initialization_database_action_primary_label">Retry</string>
    <string name="error_initialization_database_action_secondary_label">Clear App Data</string>

    <string name="error_initialization_preferences_title">Configuration Error</string>
    <string name="error_initialization_preferences_description">App configuration is corrupted. Try again or reset to defaults.</string>
    <string name="error_initialization_preferences_action_primary_label">Retry</string>
    <string name="error_initialization_preferences_action_secondary_label">Reset Settings</string>

    <string name="error_initialization_unknown_title">Initialization Error</string>
    <string name="error_initialization_unknown_description">An unexpected error occurred: %1$s</string>
    <string name="error_initialization_unknown_action_primary_label">Retry</string>

    <!-- Error Screen -->
    <string name="screen_Error_title">There was a problem loading this page. Please try again.</string>
    <string name="screen_Error_description">The service cannot be reached at the moment.</string>
    <string name="screen_Error_action_retry_label">Try again</string>

    <!-- Address labels -->
    <string name="address_form_content_description">Address form</string>
    <string name="address_street_label">Street</string>
    <string name="address_postal_code_label">Postal Code</string>
    <string name="address_city_label">City</string>
    <string name="address_county_label">County</string>
    <string name="address_country_label">Country</string>

    <!-- Welcome Screen -->
    <string name="screen_Welcome_action_sign_up_label">Sign up</string>
    <string name="screen_Welcome_action_sign_in_label">Sign in</string>
    <string name="screen_Welcome_action_info_content_description">Info button</string>
    <string name="screen_Welcome_sign_up_form_title">Sign up</string>
    <string name="screen_Welcome_sign_up_form_action_save_label">Save &amp; sign in</string>
    <string name="screen_Welcome_sign_up_form_content_description">Sign up form</string>
    <string name="screen_Welcome_sign_in_form_title">Sign in</string>
    <string name="screen_Welcome_sign_in_form_username_label">Username</string>
    <string name="screen_Welcome_sign_in_form_action_sign_in_label">Sign in</string>
    <string name="screen_Welcome_sign_in_form_content_description">Sign in form</string>

    <!-- Info Screen -->
    <string name="screen_Info_title">About Anya app</string>
    <string name="screen_Info_text_quote">Get to know Anya</string>

    <!-- Start Screen -->
    <string name="screen_Start_action_cat_label">Cats</string>
    <string name="screen_Start_action_cat_content_description">Action to navigate to cats page</string>
    <string name="screen_Start_action_owner_label">Owners</string>
    <string name="screen_Start_action_owner_content_description">Action to navigate to owners page</string>
    <string name="screen_Start_action_info_label">About Anya</string>
    <string name="screen_Start_action_info_content_description">Action to navigate to information page</string>
    <string name="screen_Start_action_censor_label">Censor text</string>
    <string name="screen_Start_action_censor_content_description">Action to navigate to censor text page</string>

    <!-- Import Screen -->
    <string name="screen_Import_title">Import Data</string>
    <string name="screen_Import_message_cat">You received a cat named %1$s.</string>
    <string name="screen_Import_message_owner">You received an owner named %1$s.</string>
    <string name="screen_Import_action_import_label">Import</string>
    <string name="screen_Import_action_view_details_label">View Details</string>
    <string name="screen_Import_success_message">Successfully imported %1$s.</string>
    <string name="screen_Import_error_message">Failed to import data.</string>

    <!-- Censored Text Screen -->
    <string name="screen_CensoredText_textField_label">Uncensored text</string>
    <string name="screen_CensoredText_action_censor_label">Censor</string>
    <string name="screen_CensoredText_section_results_title">Results</string>
    <string name="screen_CensoredText_counter_text">This feature was used %1$d times</string>

    <!-- Owner Screen -->
    <string name="screen_Owner_search_label">Search...</string>
    <string name="screen_Owner_image_description">Owner image</string>
    <string name="screen_Owner_form_content_description">Owner form</string>
    <string name="screen_Owner_form_firstname_label">Firstname</string>
    <string name="screen_Owner_form_lastname_label">Lastname</string>
    <string name="screen_Owner_form_full_name_label">Name</string>
    <string name="screen_Owner_form_username_label">Username</string>
    <string name="screen_Owner_form_dob_label">Date of Birth</string>
    <string name="screen_Owner_fab_action_add_content_description">Add new owner</string>
    <string name="screen_Owner_list_item_content_description">Swipeable owner list item %1$s, click to view owner details</string>
    <string name="screen_Owner_action_cats_content_description">Owner's cats action</string>
    <string name="screen_Owner_section_personal_details_title">Personal details</string>
    <string name="screen_Owner_section_address_title">Address</string>
    <string name="screen_Owner_section_cats_title">Cats</string>
    <string name="screen_Owner_action_cats_label_one">1 Cat</string>
    <string name="screen_Owner_action_cats_label_many">%1$d Cats</string>

    <!-- Cat Screen -->
    <string name="screen_Cat_search_label">Search...</string>
    <string name="screen_Cat_image_description">Cat image</string>
    <string name="screen_Cat_form_content_description">Cat form</string>
    <string name="screen_Cat_form_name_label">Name</string>
    <string name="screen_Cat_form_nickname_label">Nickname</string>
    <string name="screen_Cat_form_dob_label">Date of Birth</string>
    <string name="screen_Cat_form_breed_label">Breed</string>
    <string name="screen_Cat_form_eye_color_label">Eye Color</string>
    <string name="screen_Cat_form_fur_color_label">Fur Color</string>
    <string name="screen_Cat_form_sterilized_label">Sterilized</string>
    <string name="screen_Cat_form_owner_label">I'm the owner</string>
    <string name="screen_Cat_form_address_label">Lives with me</string>
    <string name="screen_Cat_fab_action_add_content_description">Add new cat</string>
    <string name="screen_Cat_list_item_content_description">Swipeable cat list item %1$s, click to view cat details</string>
    <string name="screen_Cat_action_owner_content_description">Owner action</string>
    <string name="screen_Cat_action_medical_record_content_description">Medical record action</string>
    <string name="screen_Cat_action_pedigree_content_description">View pedigree action</string>
    <string name="screen_Cat_section_personal_details_title">Personal details</string>
    <string name="screen_Cat_section_address_title">Address</string>
    <string name="screen_Cat_section_owner_title">Owner</string>

    <!-- Medical Record Screen -->
    <string name="screen_MedicalRecord_search_label">Search...</string>
    <string name="screen_MedicalRecord_form_content_description">Medical record form</string>
    <string name="screen_MedicalRecord_form_type_label">Type</string>
    <string name="screen_MedicalRecord_form_title_label">Title</string>
    <string name="screen_MedicalRecord_form_description_label">Description</string>
    <string name="screen_MedicalRecord_form_date_label">Date</string>
    <string name="screen_MedicalRecord_form_contagious_label">Contagious</string>
    <string name="screen_MedicalRecord_fab_action_add_content_description">Add new medical record</string>
    <string name="screen_MedicalRecord_list_item_content_description">Swipeable medical record list item %1$s, click to view record details</string>
    <string name="screen_MedicalRecord_section_record_details_title">Medical record details</string>

    <!-- Secure screens - authenticated mode -->

</resources>
